@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.33 2005/01/10 08:32:35 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.34 2005/01/11 08:54:17 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  11 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added basic code for resizing filesystems with pyparted.
 
   10 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Fixed partition() in x86Template so that it scans through logicals and deletes
